--- a/style.css
+++ b/style.css
@@ -1,5 +1,39 @@
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
 }
+header nav a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: gray;
+}
+
+
+figcaption {
+  font-size: small;
+}
+
+#featured-property #p1 {
+  width: 800px;
+}
+
+#featured-property #p2 {
+  width: 800px;
+}
+
+.center {
+  margin: auto;
+  width: 50%;
+}
+
+#details > div {
+  background-color: red;
+  width: 25%;
+  float: left;
+  text-align: center;
+  
+}
+
